tests/ui/consts/const-eval/const_raw_ptr_ops2.stderr
error[E0080]: memory access failed: attempting to access 4 bytes, but got 0x2a[noalloc] which is a dangling pointer (it has no provenance)
  --> $DIR/const_raw_ptr_ops2.rs:7:26
   |
LL | const Z2: i32 = unsafe { *(42 as *const i32) };
   |                          ^^^^^^^^^^^^^^^^^^^ evaluation of `Z2` failed here

error[E0080]: memory access failed: attempting to access 4 bytes, but got 0x2c[noalloc] which is a dangling pointer (it has no provenance)
  --> $DIR/const_raw_ptr_ops2.rs:8:26
   |
LL | const Z3: i32 = unsafe { *(44 as *const i32) };
   |                          ^^^^^^^^^^^^^^^^^^^ evaluation of `Z3` failed here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
